samples/_failures_safe/1761176548_d83400_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3242877f.c: In function ‘main’:
./samples/SAFE/__tmp_3242877f.c:143:5: error: expected expression at end of input
  143 |     addEdge(graph,
      |     ^~~~~~~
./samples/SAFE/__tmp_3242877f.c:143:5: error: too few arguments to function ‘addEdge’
./samples/SAFE/__tmp_3242877f.c:38:6: note: declared here
   38 | void addEdge(struct Graph *graph, int src, int dest, int weight) {
      |      ^~~~~~~
./samples/SAFE/__tmp_3242877f.c:143:5: error: expected declaration or statement at end of input
  143 |     addEdge(graph,
      |     ^~~~~~~
